fixed logo size on mobile version

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -48,7 +48,7 @@ section {
         background-color: #f0f0f0;
 
         .background-content {
-            padding: 3em 5em;
+            padding: 4em 5em;
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -63,10 +63,11 @@ section {
                 left: 0;
                 top: 0;
                 content: url('./../../../public/assets/img/header/Logo.png');
+                
 
                 @media (max-width:750px) {
                     padding: 1em 3em;
-                    transform: scale(0.8);
+                    transform: scale(0.6);
                 }
 
                 padding: 3em 5em;
